Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 1.4
-
None
-
None
-
cdh5.1.0 on ubuntu, from packages
Description
Running the following query reliably crashes the node it is run on:
[impala1:21000] > select trunc('2014-07-22 01:34:55 +0100', 'year'); Query: select trunc('2014-07-22 01:34:55 +0100', 'year') Error communicating with impalad: TSocket read 0 bytes Not connected (use CONNECT to establish a connection)
This error is in the impalad log:
terminate called after throwing an instance of 'boost::exception_detail::clone_impl<boost::exception_detail::error_info_injector<boost::gregorian::bad_year> >'
what(): Year is out of valid range: 1400..10000
Attachments
Issue Links
- relates to
-
IMPALA-2868 Distant timestamp in GROUP BY reliably crashes node
- Resolved
1.
|
Crash in date manipulation expression | Resolved | Victor Bittorf |