be/src/exprs/expr-test.cc
@@ -2513,6 +2513,9 @@ TEST_F(ExprTest, TimestampFunctions) {
   TestStringValue("cast(from_utc_timestamp(cast(1333594800 as timestamp),"
       "'Europe/Moscow') as string)", "2012-04-05 07:00:00");
 
+  // Regression for IMPALA-1105
+  TestIsNull("cast(cast('NOTATIMESTAMP' as timestamp) as string)", TYPE_STRING);
+
   TestStringValue("cast(cast('2012-01-01 09:10:11.123456789' as timestamp) as string)",
       "2012-01-01 09:10:11.123456789");
   // Add/sub years.
@@ -2880,6 +2883,17 @@ TEST_F(ExprTest, TimestampFunctions) {
   TestIsNull("unix_timestamp('1970-01', 'yyyy-MM-dd')", TYPE_INT);
   TestIsNull("unix_timestamp('1970-20-01', 'yyyy-MM-dd')", TYPE_INT);
 
+
+  // regression test for IMPALA-1105
+  TestIsNull("cast(trunc('2014-07-22 01:34:55 +0100', 'year') as STRING)", TYPE_STRING);
+  TestStringValue("cast(trunc(cast('2014-04-01' as timestamp), 'SYYYY') as string)",
+          "2014-01-01 00:00:00");
+  TestIsNull("cast(trunc('01:34:55', 'year') as STRING)", TYPE_STRING);
+  TestStringValue("cast(trunc(cast('07:02:03' as timestamp), 'MI') as string)",
+          "07:02:00");
+  // note: no time value in string defaults to 00:00:00
+  TestStringValue("cast(trunc(cast('2014-01-01' as timestamp), 'MI') as string)",
+          "2014-01-01 00:00:00");
 
   TestStringValue(
         "cast(trunc(cast('2014-04-01 01:01:01' as timestamp), 'SYYYY') as string)",
